test the likelihood

--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -1,35 +1,35 @@
-param[ombh2] = 0.022
-param[omch2] = 0.12
-param[tau] = 0.08
-param[theta] = 1.041
-param[logA] = 3.1
-param[ns] = 0.96
-param[A_ps_100] = 153 0 360 27 27
-param[A_ps_143] = 54.9 0 270 4.5 4.5
-param[A_ps_217] = 55.8 0 450 7.2 7.2
-param[A_cib_143] = 4 0 20 3 3
-param[A_cib_217] = 55.5 0 80 3 3
-param[A_sz] = 4 0 10 1 1
-param[r_ps] = 0.91 0.0 1.0 0.04 0.04
-param[r_cib] = 0.63 0.0 1.0 0.05 0.05
-param[n_Dl_cib] = 0.6 -2 2 0.05 0.05
-param[cal_100] = 1 0.98 1.02  0.0004 0.0004
-param[cal_217] = 1 0.95 1.05 0.001 0.001
-param[xi_sz_cib] = 0.1 0 1 .2 .2
-param[A_ksz] = 1 0 10 .7 0.7
-param[Bm_1_1] = 0.3 -20 20 0.3 0.3
-param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
-param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
+param[ombh2] = 0.02223508
+param[omch2] = 0.1196
+param[tau] = 0.07832564
+param[theta] = 1.041607
+param[logA] = 3.066313
+param[ns] = 0.9579036
+param[A_ps_100] = 123.7563 0 360 27 27
+param[A_ps_143] = 56.08708 0 270 4.5 4.5
+param[A_ps_217] = 119.8065 0 450 7.2 7.2
+param[A_cib_143] = 2.293977 0 20 3 3
+param[A_cib_217] = 26.59501 0 80 3 3
+param[A_sz] = 7.94578 0 10 1 1
+param[r_ps] = 0.959174 0.0 1.0 0.04 0.04
+param[r_cib] = 0.3063521 0.0 1.0 0.05 0.05
+param[n_Dl_cib] = 0.6140128 -2 2 0.05 0.05
+param[cal_100] = 1.000577 0.98 1.02  0.0004 0.0004
+param[cal_217] = 0.9945920 0.95 1.05 0.001 0.001
+param[xi_sz_cib] = 0.3197675 0 1 .2 .2
+param[A_ksz] = 3.509048 0 10 .7 0.7
+param[Bm_1_1] = 0.2668783 -20 20 0.3 0.3
+param[alpha_JLA] =  0.1427315 0.01 2. 0.005 0.005
+param[beta_JLA] = 3.056036 0.9 4.6 0.05 0.05
 
 action = TEST
 chain_name = chains/lcdm
 paramnames = paramnames/std6.paramnames    
-propose_matrix = covmats/lcdm.covmat
+propose_matrix = 
 last_slow = ns
 overwrite = F
 update_seconds = 1800
-feedback = 2
-total_steps = 10000
+feedback = 0
+total_steps = 50000
 
 use_CMB = T
 use_SN = T
