--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -32,7 +32,7 @@ feedback = 0
 total_steps = 50000
 
 use_CMB = T
-use_SN = T
-use_BAO = T
-use_HST = T
-use_lensing = T
+use_SN = F
+use_BAO = F
+use_HST = F
+use_lensing = F
