--- a/background/Makefile
+++ b/background/Makefile
@@ -17,6 +17,9 @@ $(BGLIB): $(BGOBJ)
 Test: $(BGOBJ) test.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) test.o $(LINK)
 
+TestEFT: $(BGOBJ) testeft.o  ../include/background.h $(UTILS)/libcooputils.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) testeft.o $(LINK)
+
 
 TestDE: $(BGOBJ) testde.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) testde.o $(LINK)
