--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -2,9 +2,9 @@ param[ombh2] = 0.02228 0.01 0.1 0.00024 0.0002
 param[omch2] = 0.1197 0.00 0.2 0.0023 0.002
 param[theta] = 1.04085 0.8 1.2 0.00048 0.0004
 param[tau] = 0.08
-param[de_Q] = 0.02 0. 0.5 0.03 0.03
+param[de_Q] = 0.
 param[de_epss] = 0.1 0. 1.5 0.03 0.03
-param[de_epsinf] = 0.1 0. 1. 0.03 0.03
+param[de_epsinf] = 0.
 param[de_zetas] = 0.
 param[logA] = 3.098
 param[ns] = 0.9624
@@ -15,14 +15,14 @@ action = MCMC
 chain_name = chains/qcdm_bg
 paramnames = paramnames/qcdm_noCMB.paramnames    
 propose_matrix = 
-update_seconds = 15
+update_seconds = 30
 
 #this sets the last slow parameter
-last_slow = ns
+last_slow = 
 
 #do overwrite chains? 
 overwrite = F
-feedback = 4
+feedback = 1
 total_steps = 10000
 
 use_CMB = F
