fixed a potential bug in LLCORR

--- a/firstorder/Makefile
+++ b/firstorder/Makefile
@@ -54,7 +54,7 @@ clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test DOCLS OneMode
 
 
-firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h
+firstorder.o:	pertobj.o  ../include/firstorder_equations.h ../include/firstorder_source.h ../include/recfast_source.h ../include/recfast_head.h ../include/firstorder_basic_utils.h ../include/firstorder_ic.h ../include/firstorder_ic_EFT.h ../include/firstorder_equations_EFT.h
 wrapper.o: 	firstorder.o lensing.o Cls_post_process.o
 test.o:		wrapper.o
 test_one_mode.o: wrapper.o
