--- a/configure.in
+++ b/configure.in
@@ -37,19 +37,23 @@ DARK_ENERGY_MODEL = EFT
 LAPACK = APPLE
 
 ##FFTW lib (v3.2 up)
-FFTW3 =$(HOME)/work/scilibs/fftw/
+FFTW3 =
+#$(HOME)/work/scilibs/fftw/
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
-CLIKPATH =$(HOME)/work/scilibs/planck15/plc-2.0/
+CLIKPATH =
+#$(HOME)/work/scilibs/planck15/plc-2.0/
 
 ##cfitsio lib, mandatory if you do maps
-CFITSIO = $(HOME)/work/scilibs/cfitsio
+CFITSIO =
+#$(HOME)/work/scilibs/cfitsio
 
 ##Healpix lib, mandatory if you do maps
-HEALPIX = $(HOME)/work/scilibs/Healpix
+HEALPIX =
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
