--- a/configure_linux_gfortran.in
+++ b/configure_linux_gfortran.in
@@ -30,24 +30,32 @@ C_COMPILER = $(GCC_NAME)
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
-##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
+##set to EFT for Effective Field Theory Dark Energy models
+DARK_ENERGY_MODEL = EFT
 
-LAPACK = $(HOME)/includes/lapack-3.4.2
+##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
+LAPACK =
+#$(HOME)/includes/lapack-3.4.2
 
 ##FFTW lib (v3.2 up)
-FFTW3 = $(HOME)/includes/fftw3
+FFTW3 =
+#$(HOME)/includes/fftw3
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
-CLIKPATH = $(HOME)/work/scilibs/COOP/forecast/plc-1.0/
+##CLIK path
+CLIKPATH =
+#$(HOME)/work/scilibs/COOP/forecast/plc-1.0/
 
 ##cfitsio lib, mandatory if you do mapio
-CFITSIO = $(HOME)/work/scilibs/cfitsio
+CFITSIO =
+#$(HOME)/work/scilibs/cfitsio
 
 ##Healpix lib, mandatory if you do mapio
-HEALPIX = $(HOME)/work/scilibs/Healpix
+HEALPIX =
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -201,4 +209,9 @@ ifneq ($(CLIKPATH),)
 LINK += -L$(CLIKPATH)/lib -lclik_f90
 INCLUDE += -I$(CLIKPATH)/include 
 FFLAGS += -DHAS_CLIK=1
+endif
+
+##effective field theory dark energy
+ifeq ($(DARK_ENERGY_MODEL),EFT)
+FFLAGS += -DDO_EFT_DE=1
 endif
