--- a/configure_macOS.in
+++ b/configure_macOS.in
@@ -30,23 +30,30 @@ C_COMPILER = $(GCC_NAME)
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
-##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
+### set to EFT for effective field theory, LAMBDA for cosmological constant
+DARK_ENERGY_MODEL = EFT
 
-LAPACK = $(HOME)/includes/lapack-3.4.2
+##LAPACK lib; for MacOS set LAPACK = APPLE
+LAPACK = APPLE
 
 ##FFTW lib (v3.2 up)
-FFTW3 = $(HOME)/includes/fftw3
+FFTW3 =
+#$(HOME)/work/scilibs/fftw/
 
 ## gsl lib 
 GSL =
 #$(HOME)/mathlib/gsl
 
+CLIKPATH =
+#$(HOME)/work/scilibs/planck15/plc-2.0/
 
-##cfitsio lib, mandatory if you do mapio
-CFITSIO = $(HOME)/work/scilibs/cfitsio
+##cfitsio lib, mandatory if you do maps
+CFITSIO =
+#$(HOME)/work/scilibs/cfitsio
 
-##Healpix lib, mandatory if you do mapio
-HEALPIX = $(HOME)/work/scilibs/Healpix
+##Healpix lib, mandatory if you do maps
+HEALPIX =
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -100,6 +107,8 @@ FC = $(MPI_COMPILER_ALIAS)
 FFLAGS += -DMPI
 CFLAGS += -DMPI
 INCLUDE += -I/usr/local/include
+#for my macOS
+INCLUDE += -I/opt/local/include/openmpi-gcc48/  
 else
 FC = $(FORTRAN_COMPILER)
 endif
@@ -195,3 +204,14 @@ FFLAGS += -DHAS_LAPACK=1
 CFLAGS += -DHAS_LAPACK=1
 endif
 
+### set clik flags
+ifneq ($(CLIKPATH),)
+LINK += -L$(CLIKPATH)/lib -lclik_f90
+INCLUDE += -I$(CLIKPATH)/include 
+FFLAGS += -DHAS_CLIK=1
+endif
+
+##effective field theory dark energy
+ifeq ($(DARK_ENERGY_MODEL),EFT)
+FFLAGS += -DDO_EFT_DE=1
+endif
