--- a/configure_minimum.in
+++ b/configure_minimum.in
@@ -3,7 +3,6 @@ PLATFORM = MacOS
 #PLATFORM = LINUX
 
 ifeq ($(PLATFORM),MacOS)
-### set it to the gfortran compiler on your MacOS
 GFORTRAN_NAME = gfortran-mp-4.8
 else
 GFORTRAN_NAME = gfortran
@@ -31,27 +30,30 @@ C_COMPILER = $(GCC_NAME)
 ########not all libraries are required  (depending on what you want to do)####
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
-##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
+### set to EFT for effective field theory, LAMBDA for cosmological constant
+DARK_ENERGY_MODEL = EFT
 
-#for MacOS set LAPACK = APPLE
+##LAPACK lib; for MacOS set LAPACK = APPLE
 LAPACK = APPLE
 
 ##FFTW lib (v3.2 up)
 FFTW3 =
-
+#$(HOME)/work/scilibs/fftw/
 
 ## gsl lib 
 GSL =
+#$(HOME)/mathlib/gsl
 
 CLIKPATH =
+#$(HOME)/work/scilibs/planck15/plc-2.0/
 
-##cfitsio lib, mandatory if you want to analyze maps
+##cfitsio lib, mandatory if you do maps
 CFITSIO =
-#/xxx/cfitsio/
+#$(HOME)/work/scilibs/cfitsio
 
-##Healpix lib, mandatory if you want to analyze maps
-HEALPIX = 
-#/xxx/Healpix/
+##Healpix lib, mandatory if you do maps
+HEALPIX =
+#$(HOME)/work/scilibs/Healpix
 
 ####################### the rest ##########################################
 #should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
@@ -207,4 +209,9 @@ ifneq ($(CLIKPATH),)
 LINK += -L$(CLIKPATH)/lib -lclik_f90
 INCLUDE += -I$(CLIKPATH)/include 
 FFLAGS += -DHAS_CLIK=1
+endif
+
+##effective field theory dark energy
+ifeq ($(DARK_ENERGY_MODEL),EFT)
+FFLAGS += -DDO_EFT_DE=1
 endif
