--- a/utils/Makefile
+++ b/utils/Makefile
@@ -20,6 +20,8 @@ Test: $(OBJ) test.o $(TYPEDEF)/libcooptypedef.a
 MPLOT: $(OBJ) makeplot.o $(TYPEDEF)/libcooptypedef.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) makeplot.o $(LINK)
 
+SMOOTH:	$(OBJ) smooth_data.o $(TYPEDEF)/libcooptypedef.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) smooth_data.o $(LINK)
 
 Enc: $(OBJ) encrypt.o $(TYPEDEF)/libcooptypedef.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) encrypt.o $(LINK)
@@ -29,7 +31,7 @@ Dec: $(OBJ) decrypt.o $(TYPEDEF)/libcooptypedef.a
 
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test MPLOT Dec Enc
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test MPLOT Dec Enc SMOOTH
 
 
 test.o: $(LIB)
