Coupled_DE works at background level

--- a/background/Makefile
+++ b/background/Makefile
@@ -21,8 +21,8 @@ TestEFT: $(BGOBJ) testeft.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) testeft.o $(LINK)
 
 
-TestDE: $(BGOBJ) testde.o  ../include/background.h $(UTILS)/libcooputils.a
-	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) testde.o $(LINK)
+TestCPLDE: $(BGOBJ) test_cpl_de.o  ../include/background.h $(UTILS)/libcooputils.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) test_cpl_de.o $(LINK)
 
 FEPS: $(BGOBJ) fiteps.o  ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) fiteps.o $(LINK)
@@ -35,7 +35,7 @@ PlotData: $(BGOBJ) plotdata.o ../include/background.h $(UTILS)/libcooputils.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(BGOBJ) plotdata.o $(LINK)
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test TestDE TEPS FEPS
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ Test TestCPLDE TEPS FEPS
 
 test.o:   $(BGOBJ)
 testde.o:   $(BGOBJ)
