--- a/configure.in
+++ b/configure.in
@@ -32,7 +32,8 @@ C_COMPILER = $(GCC_NAME)
 ##############################################################################
 ### set to EFT for effective field theory, LAMBDA for cosmological constant, COUPLED_DE for coupled Dark Energy (a scalar field coupled with CDM)
 DARK_ENERGY_MODEL = LAMBDA
-#EFT
+#DARK_ENERGY_MODEL = EFT
+#DARK_ENERGY_MODEL = COUPLED_DE
 
 ##LAPACK lib; for MacOS set LAPACK = APPLE
 LAPACK = APPLE
