--- a/configure_linux_gfortran.in
+++ b/configure_linux_gfortran.in
@@ -31,7 +31,9 @@ C_COMPILER = $(GCC_NAME)
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
 ##set to EFT for Effective Field Theory Dark Energy models
-DARK_ENERGY_MODEL = EFT
+#DARK_ENERGY_MODEL = LAMBDA
+#DARK_ENERGY_MODEL = EFT
+#COUPLED_DE
 
 ##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
 LAPACK =
