--- a/configure_linux_ifort.in
+++ b/configure_linux_ifort.in
@@ -32,6 +32,8 @@ C_COMPILER = $(ICC_NAME)
 ##############################################################################
 ##Dark Energy Model (set to EFT for effective field theory)
 DARK_ENERGY_MODEL = EFT
+#DARK_ENERGY_MODEL = COUPLED_DE
+#DARK_ENERGY_MODEL = LAMBDA
 
 ##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)
 LAPACK =
