--- a/configure_minimum.in
+++ b/configure_minimum.in
@@ -31,7 +31,10 @@ C_COMPILER = $(GCC_NAME)
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
 ### set to EFT for effective field theory, LAMBDA for cosmological constant
-DARK_ENERGY_MODEL = EFT
+DARK_ENERGY_MODEL = LAMBDA
+#DARK_ENERGY_MODEL = COUPLED_DE
+#DARK_ENERGY_MODEL = EFT
+
 
 ##LAPACK lib; for MacOS set LAPACK = APPLE
 LAPACK = APPLE
