--- a/forecast/myinis/qcdm_pl15_bg.ini
+++ b/forecast/myinis/qcdm_pl15_bg.ini
@@ -5,35 +5,35 @@ param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_epss] = 0.2 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
-param[de_Q] = 0.1 0. 1. 0.03 0.03
-param[logA] = 3.066313 2. 4. 0.005 0.005
-param[ns] = 0.9624  0.5 1.5 0.008 0.008
-param[A_cib_217] = 65 0 200 10 1.2
+param[de_Q] = 0.5 0. 1. 0.03 0.03
+param[logA] = 3.066313
+param[ns] = 0.9624
+param[A_cib_217] = 65 
 param[cib_index] = -1.3
-param[xi_sz_cib] = 0.05 0 1 0.1 0.1
-param[A_sz] = 5 0 10 2 0.6
-param[ps_A_100_100] = 250 0 400 24 17
-param[ps_A_143_143] = 40  0 400 10 3
-param[ps_A_143_217] = 40 0 400 12 2
-param[ps_A_217_217] = 100  0 400 13 2.5
-param[ksz_norm] = 0.1 0 10 3 1
-param[gal545_A_100] = 7 0 50 2 1
-param[gal545_A_143] = 9 0 50 2 1
-param[gal545_A_143_217] = 21 0 100 4 1.5
-param[gal545_A_217] = 80 0 400 15 2
-param[galf_EE_A_100] = 0.06  0 10 0.012 0.006
-param[galf_EE_A_100_143] = 0.05 0 10 0.015 0.007
-param[galf_EE_A_100_217] = 0.11 0 10 0.03 0.02
-param[galf_EE_A_143] = 0.1 0 10 0.02 0.01
-param[galf_EE_A_143_217] = 0.24 0 10 0.05 0.03
-param[galf_EE_A_217] = 0.72 0 10 0.15 0.07
+param[xi_sz_cib] = 0.05
+param[A_sz] = 5 
+param[ps_A_100_100] = 250
+param[ps_A_143_143] = 40 
+param[ps_A_143_217] = 40 
+param[ps_A_217_217] = 100
+param[ksz_norm] = 0.1
+param[gal545_A_100] = 7 
+param[gal545_A_143] = 9 
+param[gal545_A_143_217] = 21
+param[gal545_A_217] = 80
+param[galf_EE_A_100] = 0.06 
+param[galf_EE_A_100_143] = 0.05
+param[galf_EE_A_100_217] = 0.11
+param[galf_EE_A_143] = 0.1 
+param[galf_EE_A_143_217] = 0.24 
+param[galf_EE_A_217] = 0.72 
 param[galf_EE_index] = -2.4
-param[galf_TE_A_100] = 0.14 0 10 0.04 0.02
-param[galf_TE_A_100_143] = 0.12 0 10 0.04 0.02
-param[galf_TE_A_100_217] = 0.3 0 10 0.09 0.05
-param[galf_TE_A_143] = 0.24 0 10 0.07 0.04
-param[galf_TE_A_143_217] = 0.6 0 10 0.18 0.1
-param[galf_TE_A_217] = 1.8 0 10 0.5 0.3
+param[galf_TE_A_100] = 0.14 
+param[galf_TE_A_100_143] = 0.12
+param[galf_TE_A_100_217] = 0.3 
+param[galf_TE_A_143] = 0.24 
+param[galf_TE_A_143_217] = 0.6
+param[galf_TE_A_217] = 1.8 
 param[galf_TE_index] = -2.4
 param[bleak_epsilon_0_0T_0E] = 0
 param[bleak_epsilon_1_0T_0E] = 0
@@ -95,15 +95,15 @@ param[bleak_epsilon_1_2E_2E] = 0
 param[bleak_epsilon_2_2E_2E] = 0
 param[bleak_epsilon_3_2E_2E] = 0
 param[bleak_epsilon_4_2E_2E] = 0
-param[calib_100T] = 0.999 0 3 0.001 0.0005
-param[calib_217T] = 0.995 0 3 0.002 0.001
+param[calib_100T] = 0.999 
+param[calib_217T] = 0.995 
 param[calib_100P] = 1.
 param[calib_143P] = 1.
 param[calib_217P] = 1.
 param[A_pol] = 1
-param[A_planck] = 1. 0.9 1.1 0.002 0.0005
-param[alpha_JLA] =  0.1427315 0.01 2. 0.005 0.005
-param[beta_JLA] = 3.056036 0.9 4.6 0.05 0.05
+param[A_planck] = 1. 
+param[alpha_JLA] =  0.1427315 
+param[beta_JLA] = 3.056036 
 
 
 #calibration priors
@@ -145,13 +145,14 @@ n_lc_prior = 1
 #name1 name2 weight1 weight2 center sigma
 lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
  
-action = MCMC
+action = TEST
 chain_name = chains/qcdm_bg
 paramnames = paramnames/qcdm_pl15.paramnames    
 propose_matrix = 
-last_slow = ns
+#last_slow = ns
 overwrite = F
-update_seconds = 500
+update_seconds = 0
+update_steps = 1000                        
 feedback = 1
 total_steps = 12000
 
