--- a/forecast/myinis/qcdm_pl15.ini
+++ b/forecast/myinis/qcdm_pl15.ini
@@ -2,10 +2,10 @@ param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
 param[omch2] = 0.1196  0.05 0.2 0.01 0.01
 param[tau] = 0.07832564  0.01 0.3 0.01 0.01
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
-param[de_epss] = 0.2 0. 1.5 0.1 0.1
+param[de_epss] = 0. 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
-param[de_Q] = 0.1 0. 1. 0.03 0.03
+param[de_Q] = 0. 0. 1. 0.03 0.03
 param[logA] = 3.066313 2. 4. 0.005 0.005
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
@@ -151,8 +151,8 @@ paramnames = paramnames/qcdm_pl15.paramnames
 propose_matrix = 
 last_slow = ns
 overwrite = F
-update_seconds = 500
-feedback = 3
+update_steps = 1000
+feedback = 2
 total_steps = 12000
 
 use_CMB = T
