add parameters for EFT DE

--- a/forecast/myinis/qcdm_pl15_bg.ini
+++ b/forecast/myinis/qcdm_pl15_bg.ini
@@ -5,7 +5,7 @@ param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_epss] = 0.2 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
-param[de_Q] = 0.5 0. 1. 0.03 0.03
+param[de_Q] = 0.5
 param[logA] = 3.066313
 param[ns] = 0.9624
 param[A_cib_217] = 65 
