--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -1,9 +1,15 @@
-param[ombh2] = 0.02223508
-param[omch2] = 0.1196
-param[tau] = 0.07832564
-param[theta] = 1.041607
-param[logA] = 3.066313
-param[ns] = 0.9624
+param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
+param[omch2] = 0.1196  0.05 0.2 0.01 0.01
+param[tau] = 0.07832564  0.01 0.3 0.01 0.01
+param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
+param[de_w] = -1.d0
+param[de_alpha_M0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_T0] = 0. 
+param[de_alpha_H0] = 0. 
+param[logA] = 3.066313 2. 4. 0.005 0.005
+param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
 param[xi_sz_cib] = 0.05 0 1 0.1 0.1
@@ -142,13 +148,13 @@ n_lc_prior = 1
 lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
  
 action = TEST
-chain_name = chains/lcdm
-paramnames = paramnames/std6_pl15.paramnames    
+chain_name = chains/qcdm
+paramnames = paramnames/eftde.paramnames    
 propose_matrix = 
 last_slow = ns
 overwrite = F
 update_seconds = 500
-feedback = 3
+feedback = 2
 total_steps = 12000
 
 use_CMB = T
