enhance Cl speed & accuracy for Planck likelihood

--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -148,13 +148,13 @@ n_lc_prior = 1
 lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
  
 action = TEST
-chain_name = chains/qcdm
+chain_name = chains/eftde
 paramnames = paramnames/eftde.paramnames    
 propose_matrix = 
 last_slow = ns
 overwrite = F
-update_seconds = 500
-feedback = 2
+update_steps = 1000
+feedback = 3
 total_steps = 12000
 
 use_CMB = T
