--- a/forecast/myinis/qcdm_pl15.ini
+++ b/forecast/myinis/qcdm_pl15.ini
@@ -5,7 +5,7 @@ param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_epss] = 0. 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
-param[de_Q] = 0. 0. 1. 0.03 0.03
+param[de_Q] = 0. 0. 0.5 0.02 0.02
 param[logA] = 3.066313 2. 4. 0.005 0.005
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
@@ -152,7 +152,7 @@ propose_matrix =
 last_slow = ns
 overwrite = F
 update_steps = 1000
-feedback = 2
+feedback = 3
 total_steps = 12000
 
 use_CMB = T
