--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -156,7 +156,7 @@ overwrite = F
 update_steps = 1000
 feedback = 3
 total_steps = 12000
-cls_root = eftde
+cls_root = chains/eftde
 
 use_CMB = T
 use_SN = T
