--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -1,33 +1,164 @@
-param[ombh2] = 0.02228 0.01 0.1 0.00024 0.0002
-param[omch2] = 0.1197 0.00 0.2 0.0023 0.002
-param[theta] = 1.04085 0.8 1.2 0.00048 0.0004
-param[tau] = 0.08
-param[de_Q] = 0.
-param[de_epss] = 0.1 0. 1.5 0.03 0.03
+param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
+param[omch2] = 0.1196 0.05 0.2 0.01 0.01
+param[tau] = 0.07832564 0.01 0.3 0.01 0.01
+param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
+param[de_epss] = 0.2 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
-param[logA] = 3.098
+param[de_Q] = 0.5
+param[logA] = 3.066313
 param[ns] = 0.9624
-param[alpha_JLA] =  0.14 0.01 2. 0.005 0.005
-param[beta_JLA] = 3.1 0.9 4.6 0.05 0.05
+param[A_cib_217] = 65 
+param[cib_index] = -1.3
+param[xi_sz_cib] = 0.05
+param[A_sz] = 5 
+param[ps_A_100_100] = 250
+param[ps_A_143_143] = 40 
+param[ps_A_143_217] = 40 
+param[ps_A_217_217] = 100
+param[ksz_norm] = 0.1
+param[gal545_A_100] = 7 
+param[gal545_A_143] = 9 
+param[gal545_A_143_217] = 21
+param[gal545_A_217] = 80
+param[galf_EE_A_100] = 0.06 
+param[galf_EE_A_100_143] = 0.05
+param[galf_EE_A_100_217] = 0.11
+param[galf_EE_A_143] = 0.1 
+param[galf_EE_A_143_217] = 0.24 
+param[galf_EE_A_217] = 0.72 
+param[galf_EE_index] = -2.4
+param[galf_TE_A_100] = 0.14 
+param[galf_TE_A_100_143] = 0.12
+param[galf_TE_A_100_217] = 0.3 
+param[galf_TE_A_143] = 0.24 
+param[galf_TE_A_143_217] = 0.6
+param[galf_TE_A_217] = 1.8 
+param[galf_TE_index] = -2.4
+param[bleak_epsilon_0_0T_0E] = 0
+param[bleak_epsilon_1_0T_0E] = 0
+param[bleak_epsilon_2_0T_0E] = 0
+param[bleak_epsilon_3_0T_0E] = 0
+param[bleak_epsilon_4_0T_0E] = 0
+param[bleak_epsilon_0_0T_1E] = 0
+param[bleak_epsilon_1_0T_1E] = 0
+param[bleak_epsilon_2_0T_1E] = 0
+param[bleak_epsilon_3_0T_1E] = 0
+param[bleak_epsilon_4_0T_1E] = 0
+param[bleak_epsilon_0_0T_2E] = 0
+param[bleak_epsilon_1_0T_2E] = 0
+param[bleak_epsilon_2_0T_2E] = 0
+param[bleak_epsilon_3_0T_2E] = 0
+param[bleak_epsilon_4_0T_2E] = 0
+param[bleak_epsilon_0_1T_1E] = 0
+param[bleak_epsilon_1_1T_1E] = 0
+param[bleak_epsilon_2_1T_1E] = 0
+param[bleak_epsilon_3_1T_1E] = 0
+param[bleak_epsilon_4_1T_1E] = 0
+param[bleak_epsilon_0_1T_2E] = 0
+param[bleak_epsilon_1_1T_2E] = 0
+param[bleak_epsilon_2_1T_2E] = 0
+param[bleak_epsilon_3_1T_2E] = 0
+param[bleak_epsilon_4_1T_2E] = 0
+param[bleak_epsilon_0_2T_2E] = 0
+param[bleak_epsilon_1_2T_2E] = 0
+param[bleak_epsilon_2_2T_2E] = 0
+param[bleak_epsilon_3_2T_2E] = 0
+param[bleak_epsilon_4_2T_2E] = 0
+param[bleak_epsilon_0_0E_0E] = 0
+param[bleak_epsilon_1_0E_0E] = 0
+param[bleak_epsilon_2_0E_0E] = 0
+param[bleak_epsilon_3_0E_0E] = 0
+param[bleak_epsilon_4_0E_0E] = 0
+param[bleak_epsilon_0_0E_1E] = 0
+param[bleak_epsilon_1_0E_1E] = 0
+param[bleak_epsilon_2_0E_1E] = 0
+param[bleak_epsilon_3_0E_1E] = 0
+param[bleak_epsilon_4_0E_1E] = 0
+param[bleak_epsilon_0_0E_2E] = 0
+param[bleak_epsilon_1_0E_2E] = 0
+param[bleak_epsilon_2_0E_2E] = 0
+param[bleak_epsilon_3_0E_2E] = 0
+param[bleak_epsilon_4_0E_2E] = 0
+param[bleak_epsilon_0_1E_1E] = 0
+param[bleak_epsilon_1_1E_1E] = 0
+param[bleak_epsilon_2_1E_1E] = 0
+param[bleak_epsilon_3_1E_1E] = 0
+param[bleak_epsilon_4_1E_1E] = 0
+param[bleak_epsilon_0_1E_2E] = 0
+param[bleak_epsilon_1_1E_2E] = 0
+param[bleak_epsilon_2_1E_2E] = 0
+param[bleak_epsilon_3_1E_2E] = 0
+param[bleak_epsilon_4_1E_2E] = 0
+param[bleak_epsilon_0_2E_2E] = 0
+param[bleak_epsilon_1_2E_2E] = 0
+param[bleak_epsilon_2_2E_2E] = 0
+param[bleak_epsilon_3_2E_2E] = 0
+param[bleak_epsilon_4_2E_2E] = 0
+param[calib_100T] = 0.999 
+param[calib_217T] = 0.995 
+param[calib_100P] = 1.
+param[calib_143P] = 1.
+param[calib_217P] = 1.
+param[A_pol] = 1
+param[A_planck] = 1. 
+param[alpha_JLA] =  0.1427315 
+param[beta_JLA] = 3.056036 
 
-action = MCMC
+
+#calibration priors
+prior[A_planck] = 1 0.0025
+prior[calib_100T] = 0.9990004 0.001
+prior[calib_217T] = 0.99501 0.002
+
+
+#Dust priors
+#EE
+prior[galf_EE_A_100] = 0.06 0.012
+prior[galf_EE_A_100_143] = 0.05 0.015
+prior[galf_EE_A_100_217] = 0.11 0.033
+prior[galf_EE_A_143] = 0.1 0.02
+prior[galf_EE_A_143_217] = 0.24 0.048
+prior[galf_EE_A_217] = 0.72 0.14
+
+
+
+#TE
+prior[galf_TE_A100]=0.14 0.042
+prior[galf_TE_A_100_143]=0.12 0.036
+prior[galf_TE_A_100_217]=0.3 0.09
+prior[galf_TE_A_143]=0.24 0.072
+prior[galf_TE_A_143_217]=0.6 0.18 
+prior[galf_TE_A_217]=1.8 0.54
+
+
+
+
+prior[gal545_A_100] = 7 2
+prior[gal545_A_143] = 9 2
+prior[gal545_A_143_217] = 21  8.5
+prior[gal545_A_217] = 80 20 
+
+
+####linear combination priors
+n_lc_prior = 1
+#name1 name2 weight1 weight2 center sigma
+lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
+ 
+action = TEST
 chain_name = chains/qcdm_bg
-paramnames = paramnames/qcdm_noCMB.paramnames    
+paramnames = paramnames/qcdm.paramnames    
 propose_matrix = 
-update_seconds = 30
-
-#this sets the last slow parameter
-last_slow = 
-
-#do overwrite chains? 
+#last_slow = ns
 overwrite = F
+update_seconds = 0
+update_steps = 1000                        
 feedback = 1
-total_steps = 10000
+total_steps = 12000
 
 use_CMB = F
-use_lensing = F
-use_compressed_CMB = T
 use_SN = T
 use_BAO = T
 use_HST = T
+use_lensing = F
+use_compressed_CMB = T
