--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -3,36 +3,156 @@ param[omch2] = 0.1196
 param[tau] = 0.07832564
 param[theta] = 1.041607
 param[logA] = 3.066313
-param[ns] = 0.9579036
-param[A_ps_100] = 123.7563 0 360 27 27
-param[A_ps_143] = 56.08708 0 270 4.5 4.5
-param[A_ps_217] = 119.8065 0 450 7.2 7.2
-param[A_cib_143] = 2.293977 0 20 3 3
-param[A_cib_217] = 26.59501 0 80 3 3
-param[A_sz] = 7.94578 0 10 1 1
-param[r_ps] = 0.959174 0.0 1.0 0.04 0.04
-param[r_cib] = 0.3063521 0.0 1.0 0.05 0.05
-param[n_Dl_cib] = 0.6140128 -2 2 0.05 0.05
-param[cal_100] = 1.000577 0.98 1.02  0.0004 0.0004
-param[cal_217] = 0.9945920 0.95 1.05 0.001 0.001
-param[xi_sz_cib] = 0.3197675 0 1 .2 .2
-param[A_ksz] = 3.509048 0 10 .7 0.7
-param[Bm_1_1] = 0.2668783 -20 20 0.3 0.3
+param[ns] = 0.9624
+param[A_cib_217] = 65 0 200 10 1.2
+param[cib_index] = -1.3
+param[xi_sz_cib] = 0.05 0 1 0.1 0.1
+param[A_sz] = 5 0 10 2 0.6
+param[ps_A_100_100] = 250 0 400 24 17
+param[ps_A_143_143] = 40  0 400 10 3
+param[ps_A_143_217] = 40 0 400 12 2
+param[ps_A_217_217] = 100  0 400 13 2.5
+param[ksz_norm] = 0.1 0 10 3 1
+param[gal545_A_100] = 7 0 50 2 1
+param[gal545_A_143] = 9 0 50 2 1
+param[gal545_A_143_217] = 21 0 100 4 1.5
+param[gal545_A_217] = 80 0 400 15 2
+param[galf_EE_A_100] = 0.06  0 10 0.012 0.006
+param[galf_EE_A_100_143] = 0.05 0 10 0.015 0.007
+param[galf_EE_A_100_217] = 0.11 0 10 0.03 0.02
+param[galf_EE_A_143] = 0.1 0 10 0.02 0.01
+param[galf_EE_A_143_217] = 0.24 0 10 0.05 0.03
+param[galf_EE_A_217] = 0.72 0 10 0.15 0.07
+param[galf_EE_index] = -2.4
+param[galf_TE_A_100] = 0.14 0 10 0.04 0.02
+param[galf_TE_A_100_143] = 0.12 0 10 0.04 0.02
+param[galf_TE_A_100_217] = 0.3 0 10 0.09 0.05
+param[galf_TE_A_143] = 0.24 0 10 0.07 0.04
+param[galf_TE_A_143_217] = 0.6 0 10 0.18 0.1
+param[galf_TE_A_217] = 1.8 0 10 0.5 0.3
+param[galf_TE_index] = -2.4
+param[bleak_epsilon_0_0T_0E] = 0
+param[bleak_epsilon_1_0T_0E] = 0
+param[bleak_epsilon_2_0T_0E] = 0
+param[bleak_epsilon_3_0T_0E] = 0
+param[bleak_epsilon_4_0T_0E] = 0
+param[bleak_epsilon_0_0T_1E] = 0
+param[bleak_epsilon_1_0T_1E] = 0
+param[bleak_epsilon_2_0T_1E] = 0
+param[bleak_epsilon_3_0T_1E] = 0
+param[bleak_epsilon_4_0T_1E] = 0
+param[bleak_epsilon_0_0T_2E] = 0
+param[bleak_epsilon_1_0T_2E] = 0
+param[bleak_epsilon_2_0T_2E] = 0
+param[bleak_epsilon_3_0T_2E] = 0
+param[bleak_epsilon_4_0T_2E] = 0
+param[bleak_epsilon_0_1T_1E] = 0
+param[bleak_epsilon_1_1T_1E] = 0
+param[bleak_epsilon_2_1T_1E] = 0
+param[bleak_epsilon_3_1T_1E] = 0
+param[bleak_epsilon_4_1T_1E] = 0
+param[bleak_epsilon_0_1T_2E] = 0
+param[bleak_epsilon_1_1T_2E] = 0
+param[bleak_epsilon_2_1T_2E] = 0
+param[bleak_epsilon_3_1T_2E] = 0
+param[bleak_epsilon_4_1T_2E] = 0
+param[bleak_epsilon_0_2T_2E] = 0
+param[bleak_epsilon_1_2T_2E] = 0
+param[bleak_epsilon_2_2T_2E] = 0
+param[bleak_epsilon_3_2T_2E] = 0
+param[bleak_epsilon_4_2T_2E] = 0
+param[bleak_epsilon_0_0E_0E] = 0
+param[bleak_epsilon_1_0E_0E] = 0
+param[bleak_epsilon_2_0E_0E] = 0
+param[bleak_epsilon_3_0E_0E] = 0
+param[bleak_epsilon_4_0E_0E] = 0
+param[bleak_epsilon_0_0E_1E] = 0
+param[bleak_epsilon_1_0E_1E] = 0
+param[bleak_epsilon_2_0E_1E] = 0
+param[bleak_epsilon_3_0E_1E] = 0
+param[bleak_epsilon_4_0E_1E] = 0
+param[bleak_epsilon_0_0E_2E] = 0
+param[bleak_epsilon_1_0E_2E] = 0
+param[bleak_epsilon_2_0E_2E] = 0
+param[bleak_epsilon_3_0E_2E] = 0
+param[bleak_epsilon_4_0E_2E] = 0
+param[bleak_epsilon_0_1E_1E] = 0
+param[bleak_epsilon_1_1E_1E] = 0
+param[bleak_epsilon_2_1E_1E] = 0
+param[bleak_epsilon_3_1E_1E] = 0
+param[bleak_epsilon_4_1E_1E] = 0
+param[bleak_epsilon_0_1E_2E] = 0
+param[bleak_epsilon_1_1E_2E] = 0
+param[bleak_epsilon_2_1E_2E] = 0
+param[bleak_epsilon_3_1E_2E] = 0
+param[bleak_epsilon_4_1E_2E] = 0
+param[bleak_epsilon_0_2E_2E] = 0
+param[bleak_epsilon_1_2E_2E] = 0
+param[bleak_epsilon_2_2E_2E] = 0
+param[bleak_epsilon_3_2E_2E] = 0
+param[bleak_epsilon_4_2E_2E] = 0
+param[calib_100T] = 0.999 0 3 0.001 0.0005
+param[calib_217T] = 0.995 0 3 0.002 0.001
+param[calib_100P] = 1.
+param[calib_143P] = 1.
+param[calib_217P] = 1.
+param[A_pol] = 1
+param[A_planck] = 1. 0.9 1.1 0.002 0.0005
 param[alpha_JLA] =  0.1427315 0.01 2. 0.005 0.005
 param[beta_JLA] = 3.056036 0.9 4.6 0.05 0.05
 
+
+#calibration priors
+prior[A_planck] = 1 0.0025
+prior[calib_100T] = 0.9990004 0.001
+prior[calib_217T] = 0.99501 0.002
+
+
+#Dust priors
+#EE
+prior[galf_EE_A_100] = 0.06 0.012
+prior[galf_EE_A_100_143] = 0.05 0.015
+prior[galf_EE_A_100_217] = 0.11 0.033
+prior[galf_EE_A_143] = 0.1 0.02
+prior[galf_EE_A_143_217] = 0.24 0.048
+prior[galf_EE_A_217] = 0.72 0.14
+
+
+
+#TE
+prior[galf_TE_A100]=0.14 0.042
+prior[galf_TE_A_100_143]=0.12 0.036
+prior[galf_TE_A_100_217]=0.3 0.09
+prior[galf_TE_A_143]=0.24 0.072
+prior[galf_TE_A_143_217]=0.6 0.18 
+prior[galf_TE_A_217]=1.8 0.54
+
+
+
+
+prior[gal545_A_100] = 7 2
+prior[gal545_A_143] = 9 2
+prior[gal545_A_143_217] = 21  8.5
+prior[gal545_A_217] = 80 20 
+
+
+####linear combination priors
+n_lc_prior = 1
+#name1 name2 weight1 weight2 center sigma
+lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
+ 
 action = TEST
 chain_name = chains/lcdm
 paramnames = paramnames/std6.paramnames    
 propose_matrix = 
 last_slow = ns
 overwrite = F
-update_seconds = 1800
-feedback = 0
-total_steps = 50000
+update_seconds = 500
+feedback = 3
+total_steps = 12000
 
 use_CMB = T
-use_SN = F
-use_BAO = F
-use_HST = F
-use_lensing = F
+use_SN = T
+use_BAO = T
+use_HST = T
+use_lensing = T
