allow cmb datasets

--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -1,9 +1,9 @@
-param[ombh2] = 0.02223508
-param[omch2] = 0.1196
-param[tau] = 0.07832564
-param[theta] = 1.041607
-param[logA] = 3.066313
-param[ns] = 0.9624
+param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
+param[omch2] = 0.1196  0.05 0.2 0.01 0.01
+param[tau] = 0.07832564  0.01 0.3 0.01 0.01
+param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
+param[logA] = 3.066313 2. 4. 0.005 0.005
+param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
 param[xi_sz_cib] = 0.05 0 1 0.1 0.1
@@ -156,3 +156,9 @@ use_SN = T
 use_BAO = T
 use_HST = T
 use_lensing = T
+
+
+cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TTTEEE.clik
+cmb_dataset2 = ../data/cmb/low_l/bflike/lowl_SMW_70_dx11d_2014_10_03_v5c_Ap.clik
+cmb_dataset3 =  ../data/cmb/low_l/commander/commander_rc2_v1.1_l2_29_B.clik
+cmb_lensing_dataset = ../data/cmb/lensing/smica_g30_ftl_full_pp.clik_lensing
