--- a/forecast/myinis/qcdm.ini
+++ b/forecast/myinis/qcdm.ini
@@ -6,7 +6,7 @@ param[de_epss] = 0. 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
 param[de_Q] = 0. 0. 0.5 0.02 0.02
-param[logA] = 3.066313 2. 4. 0.005 0.005
+param[logAm2tau] = 2.911 2. 4. 0.0003 0.0003
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
