--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -6,7 +6,7 @@ param[de_epss] = 0.2 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
 param[de_zetas] = 0.
 param[de_Q] = 0.5
-param[logA] = 3.066313
+param[logAm2tau] = 2.911
 param[ns] = 0.9624
 param[A_cib_217] = 65 
 param[cib_index] = -1.3
