--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -2,7 +2,7 @@ param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
 param[omch2] = 0.1196  0.05 0.2 0.01 0.01
 param[tau] = 0.07832564  0.01 0.3 0.01 0.01
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
-param[logA] = 3.066313 2. 4. 0.005 0.005
+param[logAm2tau] = 2.911  2. 4. 0.0003 0.0003
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
