--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -8,7 +8,7 @@ param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
 param[de_alpha_T0] = 0. 
 param[de_alpha_H0] = 0. 
-param[logA] = 3.066313 2. 4. 0.005 0.005
+param[logAm2tau] = 2.911 2. 4. 0.0003 0.0003
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
 param[cib_index] = -1.3
