--- a/forecast/myinis/qcdm_bg.ini
+++ b/forecast/myinis/qcdm_bg.ini
@@ -1,6 +1,6 @@
 param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
 param[omch2] = 0.1196 0.05 0.2 0.01 0.01
-param[tau] = 0.07832564 0.01 0.3 0.01 0.01
+param[tau] = 0.06
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
 param[de_epss] = 0.2 0. 1.5 0.1 0.1
 param[de_epsinf] = 0.
@@ -102,8 +102,8 @@ param[calib_143P] = 1.
 param[calib_217P] = 1.
 param[A_pol] = 1
 param[A_planck] = 1. 
-param[alpha_JLA] =  0.1427315 
-param[beta_JLA] = 3.056036 
+param[alpha_JLA] =  0.1427315 0.01 2. 0.005 0.005
+param[beta_JLA] = 3.056036 0.9 4.6 0.05 0.05
 
 
 #calibration priors
